@@ -67,7 +67,6 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static java.time.format.DateTimeFormatter.ISO_OFFSET_DATE_TIME;
 import static java.util.Arrays.asList;
@@ -176,7 +175,7 @@ public final class MongoQueryBuilder implements QueryBuilder {
             String criterionPropertyName = getCriterionPropertyName(criterion.getProperty(), context);
             if (value instanceof Iterable<?> iterable) {
                 List<?> values = CollectionUtils.iterableToList(iterable);
-                obj.put(criterionPropertyName, singletonMap("$in", values.stream().map(val -> valueRepresentation(context, propertyPath, val)).collect(Collectors.toList())));
+                obj.put(criterionPropertyName, singletonMap("$in", values.stream().map(val -> valueRepresentation(context, propertyPath, val)).toList()));
             } else {
                 obj.put(criterionPropertyName, singletonMap("$in", singletonList(valueRepresentation(context, propertyPath, value))));
             }
@@ -187,7 +186,7 @@ public final class MongoQueryBuilder implements QueryBuilder {
             String criterionPropertyName = getCriterionPropertyName(criterion.getProperty(), context);
             if (value instanceof Iterable<?> iterable) {
                 List<?> values = CollectionUtils.iterableToList(iterable);
-                obj.put(criterionPropertyName, singletonMap("$nin", values.stream().map(val -> valueRepresentation(context, propertyPath, val)).collect(Collectors.toList())));
+                obj.put(criterionPropertyName, singletonMap("$nin", values.stream().map(val -> valueRepresentation(context, propertyPath, val)).toList()));
             } else {
                 obj.put(criterionPropertyName, singletonMap("$nin", singletonList(valueRepresentation(context, propertyPath, value))));
             }
@@ -225,7 +224,7 @@ public final class MongoQueryBuilder implements QueryBuilder {
             Object criteriaValue;
             if (value instanceof Iterable<?> iterable) {
                 List<?> values = CollectionUtils.iterableToList(iterable);
-                criteriaValue = values.stream().map(val -> valueRepresentation(context, propertyPath, val)).collect(Collectors.toList());
+                criteriaValue = values.stream().map(val -> valueRepresentation(context, propertyPath, val)).toList();
             } else {
                 criteriaValue = singletonList(valueRepresentation(context, propertyPath, value));
             }
@@ -481,11 +480,6 @@ public final class MongoQueryBuilder implements QueryBuilder {
                 return queryState.getParameterBindings();
             }
 
-            @Override
-            public Map<String, String> getAdditionalRequiredParameters() {
-                return Collections.emptyMap();
-            }
-
         };
     }
 
@@ -495,7 +489,7 @@ public final class MongoQueryBuilder implements QueryBuilder {
         }
         List<String> joined = joins.stream().map(JoinPath::getPath)
                 .sorted((o1, o2) -> Comparator.comparingInt(String::length).thenComparing(String::compareTo).compare(o1, o2))
-                .collect(Collectors.toList());
+                .toList();
         for (String join : joined) {
             StringJoiner rootPath = new StringJoiner(".");
             StringJoiner currentEntityPath = new StringJoiner(".");
@@ -840,7 +834,7 @@ public final class MongoQueryBuilder implements QueryBuilder {
             StringJoiner joinPathJoiner = new StringJoiner(".");
             for (Association association : propertyPath.getAssociations()) {
                 joinPathJoiner.add(association.getName());
-                if (association instanceof Embedded) {
+                if (association.isEmbedded()) {
                     continue;
                 }
                 if (joinAssociation == null) {
