@@ -27,7 +27,6 @@ import io.micronaut.serde.annotation.Serdeable;
 import java.util.Iterator;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * Inspired by the Spring Data's {@code Slice} and GORM's {@code PagedResultList}, this models a type that supports
@@ -64,6 +63,31 @@ public interface Slice<T> extends Iterable<T> {
     }
 
     /**
+     * Determine whether there is a next page.
+     *
+     * @since 4.8.0
+     * @return Whether there exist a next page.
+     */
+    default boolean hasNext() {
+        return getContent().size() == getSize();
+    }
+
+    /**
+     * Determine whether there is a previous page.
+     *
+     * @since 4.8.0
+     * @return Whether there exist a previous page.
+     */
+    default boolean hasPrevious() {
+        return getOffset() > 0;
+    }
+
+    /**
+     * Create a pageable for querying the next page of data.
+     * <p>A pageable may be created even if the end of data was reached to accommodate for
+     * cases when new data might be added to the repository. Use {@link #hasNext()} to
+     * verify if you have reached the end.</p>
+     *
      * @return The next pageable
      */
     default @NonNull Pageable nextPageable() {
@@ -71,7 +95,12 @@ public interface Slice<T> extends Iterable<T> {
     }
 
     /**
-     * @return The previous pageable.
+     * Create a pageable for querying the previous page of data.
+     * <p>A pageable may be created even if the end of data was reached to accommodate for
+     * cases when new data might be added to the repository. Use {@link #hasPrevious()} to
+     * verify if you have reached the end.</p>
+     *
+     * @return The previous pageable
      */
     default @NonNull Pageable previousPageable() {
         return getPageable().previous();
@@ -107,7 +136,7 @@ public interface Slice<T> extends Iterable<T> {
     }
 
     /**
-     * @return The number of elements
+     * @return The page of elements
      */
     default int getNumberOfElements() {
         return getContent().size();
@@ -127,7 +156,7 @@ public interface Slice<T> extends Iterable<T> {
      * @return A new slice with the mapped content
      */
     default @NonNull <T2> Slice<T2> map(Function<T, T2> function) {
-        List<T2> content = getContent().stream().map(function).collect(Collectors.toList());
+        List<T2> content = getContent().stream().map(function).toList();
         return new DefaultSlice<>(content, getPageable());
     }
 
