@@ -19,9 +19,12 @@ import io.micronaut.core.annotation.AnnotationMetadata;
 import io.micronaut.core.annotation.Internal;
 import io.micronaut.core.annotation.NonNull;
 import io.micronaut.data.annotation.Join;
+import io.micronaut.data.model.Association;
 import io.micronaut.data.model.PersistentEntity;
 import io.micronaut.data.model.Sort;
 import io.micronaut.data.model.jpa.criteria.IExpression;
+import io.micronaut.data.model.jpa.criteria.IPredicate;
+import io.micronaut.data.model.jpa.criteria.ISelection;
 import io.micronaut.data.model.jpa.criteria.PersistentEntityCriteriaQuery;
 import io.micronaut.data.model.jpa.criteria.PersistentEntityRoot;
 import io.micronaut.data.model.jpa.criteria.PersistentPropertyPath;
@@ -32,9 +35,12 @@ import io.micronaut.data.model.jpa.criteria.impl.query.QueryModelPredicateVisito
 import io.micronaut.data.model.jpa.criteria.impl.query.QueryModelSelectionVisitor;
 import io.micronaut.data.model.jpa.criteria.impl.selection.CompoundSelection;
 import io.micronaut.data.model.jpa.criteria.impl.util.Joiner;
+import io.micronaut.data.model.query.JoinPath;
 import io.micronaut.data.model.query.QueryModel;
 import io.micronaut.data.model.query.builder.QueryBuilder;
+import io.micronaut.data.model.query.builder.QueryBuilder2;
 import io.micronaut.data.model.query.builder.QueryResult;
+import jakarta.persistence.criteria.CriteriaBuilder;
 import jakarta.persistence.criteria.Expression;
 import jakarta.persistence.criteria.Order;
 import jakarta.persistence.criteria.ParameterExpression;
@@ -45,13 +51,15 @@ import jakarta.persistence.criteria.Subquery;
 import jakarta.persistence.metamodel.EntityType;
 
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static io.micronaut.data.model.jpa.criteria.impl.CriteriaUtils.hasVersionPredicate;
 import static io.micronaut.data.model.jpa.criteria.impl.CriteriaUtils.notSupportedOperation;
@@ -66,8 +74,9 @@ import static io.micronaut.data.model.jpa.criteria.impl.CriteriaUtils.requirePro
  */
 @Internal
 public abstract class AbstractPersistentEntityCriteriaQuery<T> implements PersistentEntityCriteriaQuery<T>,
-        QueryResultPersistentEntityCriteriaQuery {
+    QueryResultPersistentEntityCriteriaQuery {
 
+    protected final CriteriaBuilder criteriaBuilder;
     protected final Class<T> resultType;
     protected Predicate predicate;
     protected Selection<?> selection;
@@ -78,13 +87,102 @@ public abstract class AbstractPersistentEntityCriteriaQuery<T> implements Persis
     protected boolean forUpdate;
     protected boolean distinct;
 
-    protected AbstractPersistentEntityCriteriaQuery(Class<T> resultType) {
+    protected AbstractPersistentEntityCriteriaQuery(Class<T> resultType, CriteriaBuilder criteriaBuilder) {
         this.resultType = resultType;
+        this.criteriaBuilder = criteriaBuilder;
     }
 
     @Override
-    public QueryResult buildQuery(QueryBuilder queryBuilder) {
-        return queryBuilder.buildQuery(AnnotationMetadata.EMPTY_METADATA, getQueryModel());
+    public QueryResult buildQuery(AnnotationMetadata annotationMetadata, QueryBuilder queryBuilder) {
+        QueryBuilder2 queryBuilder2 = QueryResultPersistentEntityCriteriaQuery.findQueryBuilder2(queryBuilder);
+        if (queryBuilder2 == null) {
+            return queryBuilder.buildQuery(annotationMetadata, getQueryModel());
+        }
+        return buildQuery(annotationMetadata, queryBuilder2);
+    }
+
+    @Override
+    public QueryResult buildQuery(AnnotationMetadata annotationMetadata, QueryBuilder2 queryBuilder) {
+        SelectQueryDefinitionImpl definition = new SelectQueryDefinitionImpl(
+            entityRoot.getPersistentEntity(),
+            predicate,
+            selection == null ? entityRoot : selection,
+            calculateJoins(entityRoot.getPersistentEntity(), false),
+            forUpdate,
+            distinct,
+            orders == null ? List.of() : orders,
+            max,
+            offset
+        );
+        return queryBuilder.buildSelect(annotationMetadata, definition);
+    }
+
+    @Override
+    public QueryResult buildCountQuery(AnnotationMetadata annotationMetadata, QueryBuilder2 queryBuilder) {
+        SelectQueryDefinitionImpl definition = new SelectQueryDefinitionImpl(
+            entityRoot.getPersistentEntity(),
+            predicate,
+            criteriaBuilder.count(entityRoot),
+            calculateJoins(entityRoot.getPersistentEntity(), true),
+            false,
+            distinct,
+            List.of(),
+            -1,
+            -1
+        );
+        return queryBuilder.buildSelect(annotationMetadata, definition);
+    }
+
+    private Map<String, JoinPath> calculateJoins(PersistentEntity persistentEntity, boolean remapFetchJoins) {
+        Joiner joiner = new Joiner();
+        if (predicate instanceof IPredicate predicateVisitable) {
+            predicateVisitable.visitPredicate(joiner);
+        }
+        if (selection instanceof ISelection<?> selectionVisitable) {
+            selectionVisitable.visitSelection(joiner);
+            entityRoot.visitSelection(joiner);
+        } else {
+            entityRoot.visitSelection(joiner);
+        }
+        if (orders != null) {
+            for (Order o : orders) {
+                joiner.joinIfNeeded(requireProperty(o.getExpression()));
+            }
+        }
+        Map<String, JoinPath> joinPaths = new LinkedHashMap<>();
+        for (Map.Entry<String, Joiner.Joined> e : joiner.getJoins().entrySet()) {
+            Join.Type joinType = Optional.ofNullable(e.getValue().getType()).orElse(Join.Type.DEFAULT);
+            if (remapFetchJoins) {
+                Association association = e.getValue().getAssociation().getAssociation();
+                if (association != null && !association.getKind().isSingleEnded()) {
+                    // skip OneToMany and ManyToMany
+                    continue;
+                }
+                joinType = switch (joinType) {
+                    case INNER, FETCH -> Join.Type.DEFAULT;
+                    case LEFT_FETCH -> Join.Type.LEFT;
+                    case RIGHT_FETCH -> Join.Type.RIGHT;
+                    default -> joinType;
+                };
+            }
+            String path = e.getKey();
+            io.micronaut.data.model.PersistentPropertyPath propertyPath = persistentEntity.getPropertyPath(path);
+            if (propertyPath == null) {
+                throw new IllegalArgumentException("Invalid association path. Element [" + path + "] is not an association for [" + persistentEntity + "]");
+            }
+            Association[] associationPath;
+            if (propertyPath.getProperty() instanceof Association) {
+                associationPath = Stream.concat(
+                    propertyPath.getAssociations().stream(),
+                    Stream.of(propertyPath.getProperty())
+                ).toArray(Association[]::new);
+            } else {
+                associationPath = propertyPath.getAssociations().toArray(new Association[0]);
+            }
+            JoinPath jp = new JoinPath(path, associationPath, joinType, e.getValue().getAlias());
+            joinPaths.put(e.getKey(), jp);
+        }
+        return joinPaths;
     }
 
     @NonNull
@@ -95,19 +193,17 @@ public abstract class AbstractPersistentEntityCriteriaQuery<T> implements Persis
         }
         QueryModel qm = QueryModel.from(entityRoot.getPersistentEntity());
         Joiner joiner = new Joiner();
-        if (predicate instanceof PredicateVisitable predicateVisitable) {
-            predicateVisitable.accept(createPredicateVisitor(qm));
-            predicateVisitable.accept(joiner);
+        if (predicate instanceof IPredicate predicateVisitable) {
+            predicateVisitable.visitPredicate(createPredicateVisitor(qm));
+            predicateVisitable.visitPredicate(joiner);
         }
-        if (selection instanceof SelectionVisitable selectionVisitable) {
-            selectionVisitable.accept(new QueryModelSelectionVisitor(qm, distinct));
-            selectionVisitable.accept(joiner);
-            SelectionVisitable entityRoot = (SelectionVisitable) this.entityRoot;
-            entityRoot.accept(joiner);
+        if (selection instanceof ISelection<?> selectionVisitable) {
+            selectionVisitable.visitSelection(new QueryModelSelectionVisitor(qm, distinct));
+            selectionVisitable.visitSelection(joiner);
+            entityRoot.visitSelection(joiner);
         } else {
-            SelectionVisitable entityRoot = (SelectionVisitable) this.entityRoot;
-            entityRoot.accept(new QueryModelSelectionVisitor(qm, distinct));
-            entityRoot.accept(joiner);
+            entityRoot.visitSelection(new QueryModelSelectionVisitor(qm, distinct));
+            entityRoot.visitSelection(joiner);
         }
         if (orders != null && !orders.isEmpty()) {
             List<Sort.Order> sortOrders = orders.stream().map(o -> {
@@ -118,7 +214,7 @@ public abstract class AbstractPersistentEntityCriteriaQuery<T> implements Persis
                     return Sort.Order.asc(name);
                 }
                 return Sort.Order.desc(name);
-            }).collect(Collectors.toList());
+            }).toList();
             qm.sort(Sort.of(sortOrders));
         }
         for (Map.Entry<String, Joiner.Joined> e : joiner.getJoins().entrySet()) {
@@ -135,6 +231,7 @@ public abstract class AbstractPersistentEntityCriteriaQuery<T> implements Persis
 
     /**
      * Creates query model predicate visitor.
+     *
      * @param queryModel The query model
      * @return the visitor
      */
@@ -214,7 +311,7 @@ public abstract class AbstractPersistentEntityCriteriaQuery<T> implements Persis
         Objects.requireNonNull(restrictions);
         if (restrictions.length > 0) {
             predicate = restrictions.length == 1 ? restrictions[0] : new ConjunctionPredicate(
-                    Arrays.stream(restrictions).sequential().map(x -> (IExpression<Boolean>) x).collect(Collectors.toList())
+                Arrays.stream(restrictions).sequential().map(x -> (IExpression<Boolean>) x).toList()
             );
         } else {
             predicate = null;
@@ -339,6 +436,105 @@ public abstract class AbstractPersistentEntityCriteriaQuery<T> implements Persis
             return false;
         }
         return hasVersionPredicate(predicate);
+    }
+
+    @Internal
+    private static final class SelectQueryDefinitionImpl extends BaseQueryDefinitionImpl implements QueryBuilder2.SelectQueryDefinition {
+
+        private final Selection<?> selection;
+        private final boolean isForUpdate;
+        private final boolean isDistinct;
+        private final List<Order> order;
+        private final int limit;
+        private final int offset;
+
+        public SelectQueryDefinitionImpl(PersistentEntity persistentEntity,
+                                         Predicate predicate,
+                                         Selection<?> selection,
+                                         Map<String, JoinPath> joinPaths,
+                                         boolean isForUpdate,
+                                         boolean isDistinct,
+                                         List<Order> order,
+                                         int limit,
+                                         int offset) {
+            super(persistentEntity, predicate, joinPaths);
+            this.selection = selection;
+            this.isForUpdate = isForUpdate;
+            this.isDistinct = isDistinct;
+            this.order = order;
+            this.limit = limit;
+            this.offset = offset;
+        }
+
+        @Override
+        public Selection<?> selection() {
+            return selection;
+        }
+
+        @Override
+        public List<Order> order() {
+            return order;
+        }
+
+        @Override
+        public int limit() {
+            return limit;
+        }
+
+        @Override
+        public int offset() {
+            return offset;
+        }
+
+        @Override
+        public boolean isForUpdate() {
+            return isForUpdate;
+        }
+
+        @Override
+        public boolean isDistinct() {
+            return isDistinct;
+        }
+    }
+
+    @Internal
+    abstract static class BaseQueryDefinitionImpl implements QueryBuilder2.BaseQueryDefinition {
+
+        private final PersistentEntity persistentEntity;
+        private final Predicate predicate;
+        private final Map<String, JoinPath> joinPaths;
+
+        protected BaseQueryDefinitionImpl(PersistentEntity persistentEntity,
+                                          Predicate predicate,
+                                          Map<String, JoinPath> joinPaths) {
+            this.persistentEntity = persistentEntity;
+            this.predicate = predicate;
+            this.joinPaths = joinPaths;
+        }
+
+        @Override
+        public PersistentEntity persistentEntity() {
+            return persistentEntity;
+        }
+
+        @Override
+        public Predicate predicate() {
+            return predicate;
+        }
+
+        @Override
+        public Collection<JoinPath> getJoinPaths() {
+            return Collections.unmodifiableCollection(joinPaths.values());
+        }
+
+        @Override
+        public Optional<JoinPath> getJoinPath(String path) {
+            if (path != null) {
+                return Optional.ofNullable(joinPaths.get(path));
+            }
+            return Optional.empty();
+        }
+
     }
 
 }
